[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/idle.png" type="Texture" id=1]
[ext_resource path="res://assets/Tiles.png" type="Texture" id=2]
[ext_resource path="res://assets/parallax-mountain-mountains.png" type="Texture" id=3]
[ext_resource path="res://assets/parallax-mountain-bg.png" type="Texture" id=4]
[ext_resource path="res://Dino.gd" type="Script" id=5]
[ext_resource path="res://Meteor.tscn" type="PackedScene" id=6]
[ext_resource path="res://main.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 96, 0, 96, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "Tiles.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 96, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tiles.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 320, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tiles.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 320, 32, 32, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tiles.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 288, 128, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 8.5 )

[sub_resource type="CircleShape2D" id=8]
radius = 31.1448

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 553, 13.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 511.5, 300 )
scale = Vector2( 3.76838, 3.775 )
texture = ExtResource( 4 )

[node name="montanha" type="Sprite" parent="."]
position = Vector2( 513, 526 )
scale = Vector2( 1.88971, 1 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
show_collision = true
format = 1
tile_data = PoolIntArray( 262143, 3, 0, 196624, 3, 0, 327679, 3, 0, 262160, 2, 0, 393215, 3, 0, 327696, 2, 0, 458751, 3, 0, 393232, 2, 0, 524287, 3, 0, 458768, 2, 0, 589823, 3, 0, 524304, 2, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="Dinossauro" type="KinematicBody2D" parent="."]
position = Vector2( 496, 577 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Dinossauro"]
position = Vector2( 4, -2 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dinossauro"]
position = Vector2( 3, -14.5 )
shape = SubResource( 1 )

[node name="AreaDinosauro" type="Area2D" parent="Dinossauro"]
position = Vector2( 5, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dinossauro/AreaDinosauro"]
position = Vector2( -1, 0 )
shape = SubResource( 8 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 293.0
margin_top = 153.0
margin_right = 555.0
margin_bottom = 278.0
rect_scale = Vector2( 3, 3 )
custom_colors/default_color = Color( 0.113725, 0.764706, 0.4, 1 )
text = "RUN DINOSSAUR RUN"

[node name="Button" type="Button" parent="."]
margin_left = 423.0
margin_top = 266.0
margin_right = 587.0
margin_bottom = 334.0
text = "Jogar"

[node name="meteor" parent="." instance=ExtResource( 6 )]
position = Vector2( -121, 608 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 520, 591 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Dinossauro/AreaDinosauro" to="." method="_on_AreaDinosauro_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
